utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/ModuleConfigurationOrderConfiguration.ide
package invalid

typedef configuration ModuleConfigurationOrderConfiguration {
    backend task main
}
